--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,9 @@ h1 {
 }
 
 #giphy {
-    width: 100%;
-    height: 100%;
+    width: 50;
+    height: auto;
+    margin: auto;
     padding: 10px;
 }
 
