--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     margin-top: 5%;
     margin-bottom: 5%;
     background-color: white;
+    opacity: 0.95;
     text-align: center;
     border: 5px dashed lightgrey;
     padding: 40px;
